--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=
 SECRET_OR_KEY=secret
-NODEMAILER_USER=Сюда пишем єлектронный адрес для интернет-магазина
-NODEMAILER_PASSWORD=Сюда пишем пароль к почте
+NODEMAILER_USER=fefinalproject@gmail.com
+NODEMAILER_PASSWORD=bacziC-juhpyz-0bisde
 NODEMAILER_SERVICE=gmail
