Resolving the Vercel 404 Page Not Found Error After Page Refresh.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ],
-    
+    { "source": "/api/(.*)", "destination": "/api/404.js" }
+  ],
     "version": 2,
     "builds": [
       {
