If you need to assign a different file as the custom 404

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/404.js" }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "status": 404, "dest": "/other-404.html" }
   ],
     "version": 2,
     "builds": [
