--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/(.*)", "status": 404, "dest": "/other-404.html" }
+    { "src": "/(.*)", "status": 404, "dest": "/NoPage" }
   ],
     "version": 2,
     "builds": [
